--- a/style.css
+++ b/style.css
@@ -53,7 +53,31 @@ body{
     bottom: 1.2rem;
     left: 2.6rem;
 }
-
+  .slider{
+    background: url(https://media.istockphoto.com/photos/man-working-on-laptop-and-mobile-phone-picture-id882193344?k=20&m=882193344&s=170667a&w=0&h=XAs4HCtm_oOao-KGgiKy1SN-dI3pBvDv7wtkmcpo1LQ=);
+    background-size: cover;
+    height: 500px;
+    width: 100%;
+    box-shadow: 0px 5px 8px rgba(0,0,0,.3);
+    animation: animate 20s infinite;
+  }
+  @keyframes animate{
+    30%{
+      background: url(https://c1.wallpaperflare.com/preview/39/61/160/white-notebook-laptop-smartphone.jpg);
+      background-size: cover;
+    }
+    60%{
+      background: url(https://c0.wallpaperflare.com/preview/624/372/881/woman-dance-music-smartphone-smart-phone-sound-move-fashi.jpg);
+      background-size: cover;
+    }
+    100%{
+      background: url(https://www.trustedreviews.com/wp-content/uploads/sites/54/2021/09/Surface-Laptop-Studio-10-920x516.png);
+      background-size: cover;
+    }
+  
+  }
+  
+  
 
 
 
