feat : Home Page

--- a/style.css
+++ b/style.css
@@ -1,96 +1,226 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    width: 100vw;
-    min-height: 100vh;
+
+:root {
+    --white: #f5f1f1;
+    --grey: #C4C4C480;
 }
-.navigation{
+
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
+.navigation {
     margin: 0;
     position: sticky;
     top: 0;
+    background-color: var(--white);
+    z-index: 5;
 }
-.navigation__logo{
+
+.navigation__logo {
     display: flex;
     align-items: center;
 }
-.hamburger{
+
+.hamburger {
     padding-right: 1rem;
 }
-.navbar__search{
+
+.navbar__search {
     width: 20rem;
     position: relative;
     display: flex;
     align-items: center;
 }
-.search__box{
+
+.search__box {
     width: 100%;
     border-radius: 5px;
     padding: .7rem .4rem;
     outline: none;
     border-width: 0;
-    border: 1px solid #111;
+    border: 1px solid;
     padding-left: 3rem;
 }
 
-.search__icon{
+.search__icon {
     position: absolute;
     padding: 0 .8rem;
 }
-.navbar__right{
+
+.navbar__right {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.badge__icon{
+
+.badge__icon {
     font-size: 1.2rem;
     padding-right: .2rem;
     padding-bottom: .3rem;
 }
-.badge__number{
+
+.badge__number {
     bottom: 1.2rem;
     left: 2.6rem;
 }
-  .slider{
+
+.hero__overlay::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 31.25rem;
+    width: 100vw;
+    background-color: var(--black);
+    opacity: .7;
+    z-index: 1;
+}
+
+.hero__slider {
+    position: relative;
     background: url(https://media.istockphoto.com/photos/man-working-on-laptop-and-mobile-phone-picture-id882193344?k=20&m=882193344&s=170667a&w=0&h=XAs4HCtm_oOao-KGgiKy1SN-dI3pBvDv7wtkmcpo1LQ=);
     background-size: cover;
-    height: 500px;
+    height: 31.25rem;
     width: 100%;
-    box-shadow: 0px 5px 8px rgba(0,0,0,.3);
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, .3);
     animation: animate 20s infinite;
-  }
-  @keyframes animate{
-    30%{
-      background: url(https://c1.wallpaperflare.com/preview/39/61/160/white-notebook-laptop-smartphone.jpg);
-      background-size: cover;
+}
+
+.hero__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 31.25rem;
+    padding: 0 2rem;
+    position: absolute;
+    z-index: 1;
+}
+
+.hero__heading,
+.hero__subheading {
+    font-size: 3rem;
+    color: var(--white);
+}
+
+.hero__subheading {
+    font-size: 1.5rem;
+}
+
+.hero__content>.btn {
+    width: 10rem;
+    margin: .625rem 0;
+    font-size: 1.2rem;
+}
+
+.categories {
+    padding: 5rem 0;
+}
+
+.categories__cards {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 1rem 0;
+}
+
+.subheading {
+    padding: 2rem 0;
+    font-size: 2.25rem;
+}
+
+.categories__card {
+    width: 25rem;
+    height: 25rem;
+    margin: 1rem 0 0 2rem;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.categories__images {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    background-color: var(--grey);
+    padding: 3rem;
+    position: relative;
+}
+
+.categories__heading {
+    width: 10rem;
+    padding: 1rem 0;
+    background-color: var(--black);
+    color: var(--white);
+    position: absolute;
+    bottom: 1rem;
+    left: 7rem;
+    border-radius: 5px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: var(--grey);
+}
+
+.footer__text {
+    padding: 1rem 0;
+}
+
+.footer__icon {
+    padding: 1rem 0;
+    cursor: pointer;
+}
+
+.icon {
+    font-size: 1.85rem;
+    padding: 0 1.2rem;
+}
+
+
+/* Hero Slider Animation */
+
+@keyframes animate {
+    30% {
+        background: url(https://c1.wallpaperflare.com/preview/39/61/160/white-notebook-laptop-smartphone.jpg);
+        background-size: cover;
     }
-    60%{
-      background: url(https://c0.wallpaperflare.com/preview/624/372/881/woman-dance-music-smartphone-smart-phone-sound-move-fashi.jpg);
-      background-size: cover;
+
+    60% {
+        background: url(https://c0.wallpaperflare.com/preview/624/372/881/woman-dance-music-smartphone-smart-phone-sound-move-fashi.jpg);
+        background-size: cover;
     }
-    100%{
-      background: url(https://www.trustedreviews.com/wp-content/uploads/sites/54/2021/09/Surface-Laptop-Studio-10-920x516.png);
-      background-size: cover;
+
+    100% {
+        background: url(https://www.trustedreviews.com/wp-content/uploads/sites/54/2021/09/Surface-Laptop-Studio-10-920x516.png);
+        background-size: cover;
     }
-  
-  }
-  
-  
+
+}
+
+
 
 
 
 /* Responsive Style */
 
 @media screen and (max-width:700px) {
-    html{
+    html {
         font-size: 12px;
     }
-    .navbar__search{
+
+    .navbar__search {
         display: none;
     }
-    .hamburger{
+
+    .hamburger {
         display: block;
         font-size: 1.3rem;
     }
@@ -98,8 +228,8 @@ body{
 
 
 
-@media screen and (max-width:400px){
-    html{
+@media screen and (max-width:400px) {
+    html {
         font-size: 10px;
     }
 }
