--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ body{
     justify-content: center;
     align-items: center;
 }
+.navbar__right >.btn{
+    text-align: center;
+}
 
 .badge__icon {
     font-size: 1.2rem;
@@ -117,6 +120,7 @@ body{
     width: 10rem;
     margin: .625rem 0;
     font-size: 1.2rem;
+    text-align: center;
 }
 
 .categories {
