--- a/style.css
+++ b/style.css
@@ -18,10 +18,14 @@ body{
 
 .navigation {
     margin: 0;
+    /* position: fixed;
+    width: 100%; */
     position: sticky;
     top: 0;
+    z-index: 10;
+    /* top: 0; */
     background-color: var(--white);
-    z-index: 5;
+    /* z-index: 5; */
 }
 
 .navigation__logo {
