--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
 .btn:hover {
     background-color: var(--off-white);
     border: 1px solid var(--primary-color);
+    color: var(--black);
 }
 
 .search__box {
