--- a/Pages/Authentication/auth.css
+++ b/Pages/Authentication/auth.css
@@ -22,6 +22,7 @@ body {
     height: 25rem;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     box-shadow: rgb(0 0 0 / 16%) 0px 1px 4px;
     border-radius: 5px;
