--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ body{
     align-items: center;
     width: 100%;
     background-color: var(--grey);
-    margin: 0;
+    margin: 1rem 0 0 0;
 }
 
 .footer__text {
