--- a/Pages/Authentication/auth.css
+++ b/Pages/Authentication/auth.css
@@ -28,10 +28,17 @@ body {
     border-radius: 5px;
 }
 
+.auth__form--password{
+    height: 18rem;
+}
+
 input[type=password] {
     border: 1px solid var(--border-color);
 }
 
+::placeholder {
+    font-family: var(--font-family);
+}
 .login__link {
     font-size: .8rem;
 }
@@ -89,4 +96,9 @@ input[type=password] {
 
 .logout__images {
     width: 40rem;
+}
+.subtitle{
+    color: var(--border-color);
+    font-size: 1rem;
+    padding: 0 1.5rem 1rem 1.5rem;
 }
